istio-config.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: quiz-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quiz-api-service
spec:
  hosts:
    - "*"
  gateways:
    - quiz-app-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 5005
            host: quiz-api-service.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quiz-ui-service
spec:
  hosts:
    - "*"
  gateways:
    - quiz-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: quiz-ui-service.default.svc.cluster.local
